syntax = "proto3";
package user;
option go_package = "/internal/service;service";

service UserService{
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc CheckBalance(CheckBalanceRequest) returns (CheckBalanceResponse);
    rpc DecreaseBalance(DecreaseBalanceRequest) returns (DecreaseBalanceResponse);

    rpc DecreaseBalanceRevert(DecreaseBalanceRequest) returns (DecreaseBalanceResponse);
}

message RegisterRequest{
    int32 user_id = 1;
    string user_name = 2;
}

message RegisterResponse{
    int32 code =1;
    string message =2;
}

message CheckBalanceRequest{
    int32 user_id = 1;
}

message CheckBalanceResponse{
    int32 code = 1;
    string message = 2;
    float balance = 3;
}

message DecreaseBalanceRequest{
    int32 user_id = 1;
    float amount = 2;
}

message DecreaseBalanceResponse{
    int32 code = 1;
    string message = 2;
}